# mxnet-ssd

./: .gitignore  README.md  demo.py  deploy.py  evaluate.py  setup.md  train.py
dataset/: bike.py  iterator.py  mscoco.py  pascal_voc.py
deploy/: README.md
deploy/c++/: CMakeLists.txt  main.cc  readme.md
deploy/c++/cmake/: Utils.cmake
deploy/python/: live.py  main.py  readme.md
detect/: detector.py
docker/: Dockerfile.cpu.mx-1.2.0  Dockerfile.gpu.mx-1.2.0
docs/: pedestrian.md
evaluate/: custom_callbacks.py  evaluate_net.py
scripts/: scheduler.yaml  server.yaml  worker_cpu.yaml  worker_gpu.yaml
symbol/: common.py  convolution.py  densenet.py  inceptionv3.py  mobilenet.py  resnet.py  symbol_builder.py
tools/: find_mxnet.py  prepare_bike.sh  prepare_coco.sh  prepare_dataset.py  prepare_pascal.sh  split_data.py  visualize_net.py
tracker/: ssh.py
train/: train_net.py
